[DataTable]: fixed overflow: ellipsis

--- a/uui/components/tables/DataTableHeaderRow.module.scss
+++ b/uui/components/tables/DataTableHeaderRow.module.scss
@@ -31,6 +31,11 @@
         overflow: hidden;
         white-space: normal;
         line-height: 18px;
+        // it's a temporary solution until will appear in CSS multiline overflow: ellipsis
+        &:after {
+            content: ' .';
+            opacity: 0;
+        }
     }
     /* stylelint-enable */
 }
